Corrected text text wrapping

--- a/source/sass/blocks/tips.scss
+++ b/source/sass/blocks/tips.scss
@@ -124,10 +124,6 @@
   .tips__desc {
     text-align: center;
   }
-
-  .tips__desc-gap {
-    display: none;
-  }
 }
 
 @media (min-width: $desktop-width) {
